# origin1

./: .gitignore
Behavioral_patterns/Task1/: main.cpp
Behavioral_patterns/Task2/: main.cpp
Bihev_patterns/Task1/: main.cpp
Builder/Task1/: main.cpp
Builder/Task2/: main.cpp
Builder/Task2/Builder2/: Builder2.sln
Docker/: Dockerfile  main.cpp
Kursovaya_2/Gonki/: Gonki.sln
Kursovaya_3/kurs3/: kurs3.sln
Kursovaya_3_2/: CMakeLists.txt  Parser.cpp  Parser.h  main.cpp  test.ini
Kursovaya_4/Kurs4/: Kurs4.sln  Новый текстовый документ.txt
Kursovaya_4/cmake_k4/: CMakeLists.txt  main.cpp
Lesson1/Task1/: month.cpp
Lesson1/Task2/: bank_account.cpp
Lesson1/Task3/: Adress.cpp
Lesson10/Task2/LeaverDinamicClient/LeaverDinamicClient/: CMakeLists.txt  LeaverDinamicClient.vcxproj
Lesson10/Task3/: CMakeLists.txt
Lesson10/Task3/LeaverDinamicClient/: CMakeLists.txt  LeaverDinamicClient.sln  LeaverDinamicClient.vcxproj.filters
Lesson10/Task3/LeaverDinamicClient/LeaverDinamicClient/: LeaverDinamicClient.cpp
Lesson10/Task3/LeaverDinamicClient/LeaverLibraryDinamic/: LeaverDinamic.cpp  LeaverDinamic.h  LeaverLibraryDinamic.vcxproj  LeaverLibraryDinamic.vcxproj.filters
Lesson13/qsortRecursive_resh/: qsortRecursive_resh.sln
Lesson13/sliyanie_resh/: sliyanie_resh.sln
Lesson14/print_dynamic_array_1/: print_dynamic_array_1.sln
Lesson15/print_pyramid/: print_pyramid.sln
Lesson15/travel_piramid/: travel_piramid.sln
Lesson16/simple_string_hash/: simple_string_hash.sln
Lesson16/task1_L16/: task1_L16.sln
Lesson17/graf/: graf.sln
Lesson18/orgraf_1/: orgraf_1.sln
Lesson18/orgraf_2/: orgraf_2.sln
Lesson19/l19/: l19.sln
Lesson20/l20_1/: l20_1.sln
Lesson20/l20_2/: l20_2.sln
Lesson21/test_ListNode/: CMakeLists.txt  List.h  main.cpp  test-main.cpp
Lesson21/test_ListNode_2/: CMakeLists.txt  List.h  main.cpp  test-main.cpp
Lesson27/: create.sql  insert.sql  select.sql
Lesson30/: CMakeLists.txt  main.cpp
Lesson31/: CMakeLists.txt  main.cpp
Lesson32/: CMakeLists.txt  main.cpp  progressBar.h
Lesson33/: CMakeLists.txt  data.cpp  main.cpp  swapData.h
Lesson34/Task1/: main.cpp
Lesson34/Task2/: CMakeLists.txt  main.cpp
Lesson35/Task1/: CMakeLists.txt  main.cpp  shape.cpp  shape.h
Lesson9/Task1/: CMakeLists.txt  my_first_cmake_program.cpp
Lesson9/Task2/CMake_figures/: CMakeLists.txt  Figure.h  Pryamoug_Triangle.cpp  Quadrangle.h  Ravnobed_Triangle.cpp  Ravnobed_Triangle.h  Ravnostor_Triangle.cpp  Ravnostor_Triangle.h  Romb.cpp  Square.h  Triangle.cpp
LessonDatabase003/: CMakeLists.txt  ClientsDB.cpp  ClientsDB.h  main.cpp
LessonODB/: LessonODB.sln
LessonODB/LessonODB/: LessonODB.vcxproj  main.cpp
Lesson_map_1_2/: CMakeLists.txt  main.cpp
Qt/2/: CMakeLists.txt  main.cpp
Qt/3/: CMakeLists.txt  dialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
Qt/4/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Qt/5/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  stopwatch.cpp  stopwatch.h
Qt/6/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
Struct_patterns/Task1/: CMakeLists.txt
dry_solid/Task1/: main.cpp
dry_solid/Task2/: CMakeLists.txt  DataAsFormat.cpp  DataAsFormat.h  main.cpp
(+262 files in other folders)
