cmake_minimum_required(VERSION 3.22.0)
project(figures_project)
add_executable(figure_p Figures3.cpp Figure.cpp Figure.h Parallelogram.cpp Parallelogram.h Pryamoug_Triangle.cpp Pryamoug_Triangle.h Quadrangle.cpp Quadrangle.h Ravnobed_Triangle.cpp Ravnobed_Triangle.h Ravnostor_Triangle.cpp Ravnostor_Triangle.h Rectangle.cpp Rectangle.h Romb.cpp Romb.h Square.cpp Square.h Triangle.cpp Triangle.h)
